# VolumeViser

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  OVERVIEW.MD  README.MD
applications/VolAnnotater/: CMakeLists.txt  README.MD
applications/VolAnnotater/asset/: app_config.json  imgui.ini
applications/VolAnnotater/asset/glsl/: block_framewire.vert  line_shading.frag  line_shading.vert  neuron_shading.frag  neuron_shading.vert  pt_shading.frag  pt_shading.geom  pt_shading.vert  quad.vert  view_to_proj_depth.frag
applications/VolAnnotater/cmd/: main.cpp
applications/VolAnnotater/src/: Common.cpp  Common.hpp  NeuronRenderer.cpp  NeuronRenderer.hpp  SWCRenderer.cpp  SWCRenderer.hpp  VolAnnotater.cpp  VolAnnotater.hpp  VolAnnotaterGUI.cpp  VolAnnotaterGUI.hpp  main.cpp
applications/VolAnnotater/tool/: CMakeLists.txt  main.cpp  reconstruct.json
applications/VolEditor/: CMakeLists.txt  README.MD
applications/VolEditor/src/: EditorUI.cpp  EditorUI.hpp  GLWindow.hpp  main.cpp
applications/VolRenderer/: CMakeLists.txt  README.MD  volrender_config.json
applications/VolRenderer/asset/glsl/: accumulate.comp  post_process.comp  quad.frag
applications/VolRenderer/src/: Common.hpp  VideoMaker.cpp  VideoMaker.hpp  main.cpp
applications/VolRenderer/ui/: CMakeLists.txt  main.cpp
applications/VolServer/: README.MD
applications/VolViewer/: CMakeLists.txt  README.MD  viewer.json
applications/VolViewer/asset/hlsl/: quad.hlsl
applications/VolViewer/src/: Common.hpp  NeuronRenderer.cpp  NeuronRenderer.hpp  VolViewer.cpp  VolViewer.hpp  main.cpp
cuda/: CMakeLists.txt  array.hpp  buffer.hpp  common.hpp  context.hpp  cuda_wrapper.hpp  device.hpp  kernel.hpp  stream.hpp  texture.hpp  transfer.hpp
include/Algorithm/: LevelOfDetailPolicy.hpp  MarchingCube.hpp  MeshSimplify.hpp  MeshSmooth.hpp  NeuronTrace.hpp  Pipeline.hpp  Voxelization.hpp
include/Common/: Common.hpp
include/Core/: Distribute.hpp  FixedHostMemMgr.hpp  GPUMemMgr.hpp  GPUPageTableMgr.hpp  GPUVTexMgr.hpp  HashPageTable.hpp  HostMemMgr.hpp  RenderParams.hpp  Renderer.hpp  ResourceMgr.hpp
include/Extension/: IOInterface.hpp
include/Geometry/: GridOctTree.hpp  KDTree.hpp  OctTree.hpp
include/IO/: MeshIO.hpp  SWCIO.hpp  VolumeIO.hpp
include/Model/: Mesh.hpp  Neuron.hpp  SWC.hpp  Slice.hpp  Volume.hpp
src/Algorithm/: LevelOfDetailPolicy.cpp  LookUpTable.cuh  MarchingCube.cpp  MeshSimplify.cpp  MeshSmooth.cpp  MeshSmoother.cpp  NeuronTrace.cpp  Voxelization.cpp
src/Common/: Helper.hpp  helper_math.h
src/Core/: DistributeMgr.cpp  FixedHostMemMgr.cpp  GPUMemMgr.cpp  GPUPageTableMgr.cpp  GPUVTexMgr.cpp  HostMemMgr.cpp  HostPageTable.cpp  RenderParams.cpp  ResourceMgr.cpp
src/Geometry/: OctTree.cpp
src/IO/: MeshIO.cpp  SWCIO.cpp  VolumeIO.cpp
src/Model/: Mesh.cpp  SWC.cpp  Volume.cpp
src/Renderer/: CRTVolumeRenderer.cpp  Common.hpp  LVolumeRenderer.cpp  PBR.hpp  PBVolumeRenderer.cpp  RTVolumeRenderer.cpp
src/Renderer/PBR/: BRDF.hpp  Light.hpp  Material.hpp  PBR.hpp  Random.hpp  Sampling.hpp
src/Renderer/PBR/Utility/: Fresnel.hpp  Microfacet.hpp
tests/: CMakeLists.txt  test_cuda.cpp  test_rt_vol_renderer.cpp  test_voxelize.cpp
tools/: IsoSurfaceExtract.cpp
util/: CMakeLists.txt  common.hpp  geometry.hpp  image.hpp  math.hpp  misc.hpp  util.hpp
util/console/: logger.hpp  progressbar.hpp
util/event/: keycode.hpp
util/file/: raw_file_io.cpp  raw_file_io.hpp
util/geometry/: aabb3.hpp  collision.hpp  frustum.hpp
util/geometry/impl/: aabb3.inl
util/image/: image1d.hpp  image1d_view.hpp  image2d.hpp  image2d_view.hpp  image3d.hpp  image3d_view.hpp  load_image.cpp  load_image.hpp  save_image.cpp  save_image.hpp
util/image/impl/: image1d.inl  image1d_view.inl  image2d.inl  image2d_view.inl  image3d.inl  image3d_view.inl
util/math/: color2.hpp  color3.hpp  color4.hpp  common.hpp  coord.hpp  mat3_c.hpp  mat4_c.hpp  mat4_r.hpp  tensor.hpp  tensor_view.hpp  transform2.hpp  transform3.hpp  vec.hpp  vec2.hpp  vec3.hpp  vec4.hpp
util/math/impl/: color2.inl  color3.inl  color4.inl  coord.inl  mat3_c.inl  mat4_c.inl  tensor.inl  tensor_view.inl  transform3.inl  vec.inl  vec2.inl  vec3.inl  vec4.inl
util/memory/: alloc.hpp  memory.cpp  memory_arena.hpp  object_pool.hpp
util/misc/: basic_type_cast.hpp  concept.hpp  hash.hpp  intrusive.hpp  lru.hpp  model.cpp  model.hpp  scope_bomb.hpp  stdstr.hpp
util/opengl/: attrib.hpp  buffer.hpp  camera.cpp  camera.hpp  common.hpp  demo.hpp  framebuffer.hpp  keyboard.hpp  mouse.cpp  mouse.hpp  program.hpp  renderbuffer.hpp  sampler.hpp  shader.hpp  texture.hpp  uniform.hpp  vertex_array.hpp  window.cpp  window.hpp
util/parallel/: parallel_for.hpp  read_write_lock.hpp  thread_group.cpp  thread_group.hpp  thread_id.cpp  thread_id.hpp
util/time/: timeline_trace_file.hpp  timer.hpp
